--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -30,6 +30,8 @@ argon2 = "0.5.2"
 reqwest = { version = "0.11", features = ["json", "native-tls"] }
 tokio = { version = "1.35.0", features = ["full"] }
 lazy_static = "1.4.0"
+rusqlite = { version = "0.30.0", features = ["bundled"] }
+
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
