--- a/server/mini-signal-server/Cargo.toml
+++ b/server/mini-signal-server/Cargo.toml
@@ -17,6 +17,7 @@ rusqlite = { version = "0.30.0", features = ["bundled"] }
 argon2 = "0.5.2"
 x25519-dalek = "2.0.0"
 native-tls = "0.2.11"
+rand = "0.8.5"
 
 [[example]]
 name = "client-simulation"
